# opencl_lab

lab_1/: CMakeLists.txt  main_lab1.cpp
